# dRFEtools

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml  setup.py
dRFEtools/: __init__.py  _dev_scoring.py  _lowess_redundant.py  _random_forest.py  _rank_function.py  cli.py  dRFEtools.py  dev_scoring.py  linear_models_rfe.py  lowess_redundant.py  plotting.py  random_forest.py  rank_function.py  svm_models.py  utils.py
dRFEtools/lowess/: __init__.py  redundant.py
dRFEtools/metrics/: __init__.py  ranking.py
dRFEtools/scoring/: __init__.py  dev.py  random_forest.py
docs/: api.rst  citation.rst  classification.rst  conf.py  index.rst  install.rst  optimization.rst  requirements.txt  tutorials.rst
docs/api/: dev_metrics.rst  main.rst  oob_metrics.rst  plotting.rst
docs/functions/: dRFEtools.cli.build_parser.rst  dRFEtools.cli.run_dev_rfe.rst  dRFEtools.cli.run_rf_rfe.rst  dRFEtools.dev_rfe.rst  dRFEtools.dev_score_accuracy.rst  dRFEtools.dev_score_evar.rst  dRFEtools.dev_score_mse.rst  dRFEtools.dev_score_nmi.rst  dRFEtools.dev_score_r2.rst  dRFEtools.dev_score_roc.rst  dRFEtools.extract_max_lowess.rst  dRFEtools.extract_peripheral_lowess.rst  dRFEtools.features_rank_fnc.rst  dRFEtools.oob_score_accuracy.rst  dRFEtools.oob_score_evar.rst  dRFEtools.oob_score_mse.rst  dRFEtools.oob_score_nmi.rst  dRFEtools.oob_score_r2.rst  dRFEtools.oob_score_roc.rst  dRFEtools.optimize_lowess_plot.rst  dRFEtools.plot_metric.rst  dRFEtools.plot_with_lowess_vline.rst  dRFEtools.rf_rfe.rst  dRFEtools.utils.ensure_path.rst  dRFEtools.utils.get_feature_importances.rst  dRFEtools.utils.normalize_rfe_result.rst  dRFEtools.utils.save_plot_variants.rst
docs/tutorials/: optimization.rst
drfetools/: __init__.py  dRFEtools.py  lowess_redundant.py
examples/: classification.ipynb  classification.md  optimization.html  optimization.ipynb  optimization.md
examples/lr/: dRFE_simulation.tsv  dRFE_simulation_metrics.tsv  test_predictions.txt
examples/rf_class/: dRFE_simulation.tsv  dRFE_simulation_metrics.tsv  test_predictions.txt
examples/sgd_class/: dRFE_simulation.tsv  dRFE_simulation_metrics.tsv  test_predictions.txt
examples/svc/: dRFE_simulation.tsv  dRFE_simulation_metrics.tsv  test_predictions.txt
scripts/: dev_scoring.py  linear_models_rfe.py  rank_function.py
tests/: conftest.py  test_core.py  test_lowess.py  test_utils.py
