[tool.poetry]
name = "dRFEtools"
version = "0.3.5"
description = "Dynamic recursive feature elimination utilities built on scikit-learn."
authors = [
    "Kynon JM Benjamin <kj.benjamin90@gmail.com>",
    "Apuã Paquola <apua.paquola@libd.org>"
]
maintainers = ["Kynon JM Benjamin <kj.benjamin90@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.md"
keywords = ["feature selection", "recursive feature elimination", "sklearn"]
packages = [{ include = "dRFEtools" }]

[tool.poetry.scripts]
drfetools = "dRFEtools.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = ">=2.0"
pandas = ">=2.0"
matplotlib = ">=3.8"
plotnine = ">=0.13"
scikit-learn = ">=1.3"
scipy = ">=1.11"
statsmodels = ">=0.14"

[tool.poetry.urls]
homepage = "https://drfetools.readthedocs.io"
repository = "https://github.com/LieberInstitute/dRFEtools"
"Bug Tracker" = "https://github.com/paquolalab/dRFEtools/issues"
[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
docs = [
    "sphinx>=7.3",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.1"
]

[tool.poetry-dynamic-versioning]
enable = false
